# teamo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  domain_rules.yaml  index.html  package.json  panel.html  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PRIVACY.md
scripts/: generate-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings_keys.rs
src-tauri/src/auth/: http.rs  mod.rs
src-tauri/src/clipboard/: hidden_formats.rs  mod.rs  windows_listener.rs
src-tauri/src/cloud_sync/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/export/: import.rs  json.rs  markdown.rs  mod.rs
src-tauri/src/filter/: cache.rs  entropy.rs  idcard.rs  luhn.rs  mod.rs  sensitive.rs  url_match.rs
src-tauri/src/storage/: canonicalize.rs  error.rs  mod.rs  reconcile.rs  repository.rs  retention.rs  schema.rs  seed_rules.rs  simhash.rs
src-tauri/src/storage/migrations/: 001_initial.sql  002_settings_keys_cleanup.sql  003_matched_domain_rule.sql  004_pin_support.sql  005_last_used_at.sql  006_image_dims.sql  007_session_grouping.sql  008_aggregated_sessions.sql
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs  panel.rs  platform.rs
src/lib/: CloudCtaButton.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  platform.ts  settings-keys.ts  toast.tsx
src/panel/: ActionBar.tsx  AggregatedView.tsx  CardItem.tsx  CardList.tsx  PanelApp.tsx  PanelSettings.tsx  PreviewOverlay.tsx  SearchBar.tsx  SessionCard.tsx  StatsHeader.tsx  TabBar.tsx  UndoToast.tsx  WelcomeBanner.tsx  main.tsx  types.ts  useAggregated.ts  usePanel.ts  utils.ts
src/settings/: SettingsPage.tsx  types.ts  useAppRules.ts  useAuth.ts  useSettings.ts
src/settings/components/: Section.tsx  Select.tsx  Switch.tsx
src/settings/sections/: About.tsx  Cloud.tsx  Data.tsx  General.tsx  Privacy.tsx
