[package]
name = "teamo"
version = "0.0.1"
description = "你的人生记录 Agent · A clipboard-powered local-first life recording agent"
authors = ["Liu Zhiyu <54liuzhiyu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/mrliuzhiyu/teamo"
edition = "2021"
rust-version = "1.75"

[lib]
name = "teamo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# PNG encode/decode（Phase 3C：图片粘贴 + clipboard capture 存真 PNG 而非 raw RGBA）
image = { version = "0.25", default-features = false, features = ["png"] }
# Tauri 2.x 核心
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-store = "2.0"
tauri-plugin-updater = "2.0"

# 业务依赖（脚手架阶段引入，后续 issue 卷子里实际使用）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 剪切板读写
arboard = "3.4"

# 本地存储 + 安全凭证
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3.0"

# HTTP（云端通信，Phase 1B 启用）
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }

# filter-engine（敏感检测 + 域名规则）
regex = "1.11"
once_cell = "1.20"
url = "2.5"
serde_yaml = "0.9"

# 统一的错误类型（storage 层）
thiserror = "2.0"

# base64 编码（图片缩略图 data URL 传给前端）
base64 = "0.22"

# 时间格式化（memo markdown 里展示本地时区的 session 时间跨度）
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
# 测试时创建临时目录（data-export 单测用）
tempfile = "3"

# Windows 平台系统粘贴模拟（Phase 3B）
# macOS/Linux 暂不引入，避免 Linux libudev / macOS accessibility 权限负担；
# 等 Phase 4 做 macOS NSPanel 时一起补。
[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "handleapi", "winnt", "winbase"] }

[features]
# 默认启用平台默认特性
default = ["custom-protocol"]
# Tauri custom-protocol（生产构建必需）
custom-protocol = ["tauri/custom-protocol"]
